--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 POSTGRES_HOST=127.0.0.1
 POSTGRES_PORT=5432
-POSTGRES_USER=postgres
-POSTGRES_PASSWORD=mysecretpassword
-POSTGRES_DATABASE=my_database
+POSTGRES_USER=root
+POSTGRES_PASSWORD=root
+POSTGRES_DATABASE_NAME=web_db
 PORT=3000
 MODE=DEV
 RUN_MIGRATIONS=true
