--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 POSTGRES_HOST=host.docker.internal
 POSTGRES_PORT=5432
-POSTGRES_USER=
-POSTGRES_PASSWORD=
+POSTGRES_USER=root
+POSTGRES_PASSWORD=root
 POSTGRES_DATABASE_NAME=web_db
 PORT=3000
 MODE=DEV
